--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -1,96 +1,103 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>New project</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <title>César Aular</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200;300;400;500;600;700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
-
-
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
-                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="../pages/index.html">Inicio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Nosotros</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Contacto</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false">
-                            Servicios
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <li><a class="dropdown-item" href="#">Paseos</a></li>
-                            <li><a class="dropdown-item" href="#">Transporte</a></li>
-                            <li><a class="dropdown-item" href="#">Tour</a></li>
-                        </ul>
-                    </li>
-                </ul>
-            </div>
+
+    <header class="hero">
+        <div class="container">
+            <nav class="nav">
+
+                <a class="nav__items" href="index.html">Inicio</a>
+                <a class="nav__items" href=""> Nosotros </a>
+                <a class="nav__items" href="">Servicios</a>
+                <a class="nav__items" href="contacto.html">Contacto</a>
+
+            </nav>
+            <section class="hero__container">
+                <div class="hero__texts">
+                    <h1 class="hero__title"> Contactanos </h1>
+
+                </div>
+            </section>
         </div>
-    </nav>
+
+    </header>
+
+    
 
     <main>
-        
-        <div class="row">
-            <div class="col-md-1">
-                <img src="../img/img11.jpg" alt="">
-            </div>
 
-            <div class="col-md-4" >
+        <section class="contacto container">
 
-                <form action="">
-                    <br>
-                    <br>
-                    <br>
-                    <br>
-                    <div class="mb-3">
-                        <label for="exampleFormControlInput1" class="form-label">Nombre y apellido</label>
-                        <input type="text" class="form-control" id="exampleFormControlInput1"
-                            placeholder="Liam Gallagher">
-                    </div>
-                    <div class="mb-3">
-                        <label for="exampleFormControlInput1" class="form-label">Email address</label>
-                        <input type="email" class="form-control" id="exampleFormControlInput1"
-                            placeholder="name@example.com">
-                    </div>
-                    <div class="mb-3">
-                        <label for="exampleFormControlTextarea1" class="form-label">Consulta</label>
-                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-                    </div>
-                    <div class="mb-3">
-                        <button class="btn btn-primary" type="submit">Enviar</button>
-                    </div>
-                </form>
-            </div>
+            <h2 class="subtitle"> Dejanos tus datos </h2>
+
+
+            <form class="container" action="" method="post">
+
+                <label for="nombre y apellido">Nombre y apellido</label>
+                <input type="text" required>
+                <br>
+                <label for="">Mail</label>
+                <input type="email" required>
+                <br>
+                <label for="Teléfono">Teléfono</label>
+                <input type="text" required>
+                <br>
+                <br>
+                <label for=""> Comentanos tu idea </label>
+                <br>
+                <textarea name="" id="" cols="50" rows="10"></textarea>
+                <br>
+
+                <input type="submit" value="Enviar">
+
+            </form>
+
+
+        </section>
+
 
     </main>
+
+
     <footer class="footer">
-        <p> Designed by César Aular | All Rights Reserved 2022 | </p>
+        <div class="container footer__grid">
+            <p class="container footer__text"> Web designed for César Aular Belizario | 2022 | Copyright |
+                Email contact: cesar.aularb@gmail.com | Teléfono: 11 6115 5315 </p>
+
+
+            <section class="footer__contact">
+
+                <h3 class="footer__title"> Mis redes </h3>
+
+                <ul class="social">
+                    <li>
+                        <a href="" class="facebook"> <i class="fa-brands fa-facebook-square"></i> Facebook </a>
+                    </li>
+                    <li>
+                        <a href="" class="twitter"><i class="fa-brands fa-twitter"></i> Twitter </a>
+                    </li>
+                    <li>
+                        <a href="" class="instagram"><i class="fa-brands fa-instagram"></i> Instagram </a>
+                    </li>
+                </ul>
+            </section>
+        </div>
 
     </footer>
+
 </body>
 
 </html>
